--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -128,6 +128,20 @@ jobs:
             Write-Host "ULTRALIGHT_SDK_URL already provided: $env:ULTRALIGHT_SDK_URL"
             exit 0
           }
+
+      - name: "4.5 Install NSIS (early, for installer detection)"
+        if: ${{ inputs.create_installer == true }}
+        shell: pwsh
+        run: |
+          choco install nsis -y --no-progress
+          $nsisDir = Join-Path ${env:ProgramFiles(x86)} 'NSIS'
+          if (Test-Path (Join-Path $nsisDir 'makensis.exe')) {
+            # Ensure makensis is available in PATH for CMake configure
+            $nsisDir | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+            & (Join-Path $nsisDir 'makensis.exe') /VERSION | Out-Host
+          } else {
+            Write-Warning "NSIS makensis.exe not found after install; CPack/NSIS may not be available."
+          }
           # First attempt: Use GitHub API to list sdks branch and pick latest Windows SDK (x64)
           $api = "https://api.github.com/repos/${{ github.repository }}/contents/sdks?ref=base-sdk"
           $headers = @{ Authorization = "Bearer $env:GITHUB_TOKEN"; Accept = "application/vnd.github+json" }
@@ -307,10 +321,11 @@ jobs:
         if: ${{ inputs.create_installer == true || github.event_name == 'pull_request' }}
         shell: pwsh
         run: |
+          # NSIS was already installed earlier to ensure CMake/CPack sees it at configure-time.
+          # This step remains to ensure the runner has makensis in PATH if needed (idempotent).
           choco install nsis -y --no-progress
           $nsisDir = Join-Path ${env:ProgramFiles(x86)} 'NSIS'
           if (Test-Path (Join-Path $nsisDir 'makensis.exe')) {
-            # Ensure makensis is available in PATH for this and later steps
             $nsisDir | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
             & (Join-Path $nsisDir 'makensis.exe') /VERSION | Out-Host
           } else {
