--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -405,6 +405,21 @@ jobs:
           # If ZIP succeeded above, return success regardless of NSIS result.
           exit 0
 
+      - name: "6.2.4 Parse NSIS/CPack logs for errors"
+        if: ${{ inputs.create_installer == true }}
+        shell: pwsh
+        run: |
+          # Run repository-provided script to parse and summarize NSIS/CPack logs
+          $script = "${{ github.workspace }}\.github\scripts\parse_nsis_log.ps1"
+          if (Test-Path $script) { pwsh $script -BuildDir build -HeadLines 200 -TailLines 200 } else {
+            Write-Warning "parse_nsis_log.ps1 not found in repo; falling back to inline parsing"
+            # Inline fallback — short excerpt
+            $logs = @('build\nsis-cpack.log','build\zip-cpack.log')
+            foreach ($l in $logs) {
+              if (Test-Path $l) { Get-Content $l -TotalCount 50 | ForEach-Object { Write-Host "  $_" } }
+            }
+          }
+
       - name: "6.3 Rename Windows installer"
         if: ${{ inputs.create_installer == true }}
         shell: pwsh
@@ -539,7 +554,7 @@ jobs:
             Write-Host "Pattern: $p"
             $found = Get-ChildItem -Path $p -File -ErrorAction SilentlyContinue -Depth 2 | Select-Object -First 100
             if ($found) {
-              $found | ForEach-Object { Write-Host " - $($_.FullName) ($([math]::Round(($_.Length/1KB),2)) KB)" }
+              $found | ForEach-Object { Write-Host (' - {0} ({1:N2} KB)' -f $_.FullName, ($_.Length/1KB) ) }
             } else {
               Write-Host "  (none)"
             }
@@ -559,9 +574,9 @@ jobs:
         run: |
           Write-Host "Listing build/ candidates from file manifest (if present) or shallow scan (depth 2)"
           if (Test-Path build\file-manifest.csv) {
-            Import-Csv -Path build\file-manifest.csv | Sort-Object {[int]$_.Length} -Descending | Select-Object -First 200 | ForEach-Object { Write-Host " - $($_.FullName) ($([math]::Round(($_.Length/1KB),2)) KB)" }
+            Import-Csv -Path build\file-manifest.csv | Sort-Object {[int]$_.Length} -Descending | Select-Object -First 200 | ForEach-Object { Write-Host (' - {0} ({1:N2} KB)' -f $_.FullName, ($_.Length/1KB) ) }
           } else {
-            Get-ChildItem -Path build -Recurse -Depth 2 -File | Sort-Object Length -Descending | Select-Object -First 200 | ForEach-Object { Write-Host " - $($_.FullName) ($([math]::Round(($_.Length/1KB),2)) KB)" }
+            Get-ChildItem -Path build -Recurse -Depth 2 -File | Sort-Object Length -Descending | Select-Object -First 200 | ForEach-Object { Write-Host (' - {0} ({1:N2} KB)' -f $_.FullName, ($_.Length/1KB) ) }
           }
 
           # Robust search for installer candidates: prefer names starting with project prefix,
@@ -581,7 +596,7 @@ jobs:
             $finalName = "Ultralight-WebBrowser-$version-Windows-Installer$ext"
             Write-Host "Found installer candidate: $($chosen.FullName) -> copying as $finalName"
             Copy-Item -Force $chosen.FullName (Join-Path $PWD $finalName)
-            Write-Host "Workspace root now contains:"; Get-ChildItem -Path $PWD -Filter "Ultralight-WebBrowser-*Installer.*" -File | ForEach-Object { Write-Host " - $($_.FullName) ($([math]::Round(($_.Length/1KB),2)) KB)" }
+            Write-Host "Workspace root now contains:"; Get-ChildItem -Path $PWD -Filter "Ultralight-WebBrowser-*Installer.*" -File | ForEach-Object { Write-Host (' - {0} ({1:N2} KB)' -f $_.FullName, ($_.Length/1KB) ) }
           } else {
             Write-Host "No installer candidates found under build/. Trying to parse CPack logs for produced package paths..."
             $possibleLogFiles = @('build/nsis-cpack.log','build/zip-cpack.log')
@@ -610,7 +625,7 @@ jobs:
               $finalName = "Ultralight-WebBrowser-$version-Windows-Installer$ext"
               Write-Host "Copying package found in logs: $($foundFromLog.FullName) -> $finalName"
               Copy-Item -Force $foundFromLog.FullName (Join-Path $PWD $finalName)
-              Write-Host "Workspace root now contains:"; Get-ChildItem -Path $PWD -Filter "Ultralight-WebBrowser-*Installer.*" -File | ForEach-Object { Write-Host " - $($_.FullName) ($([math]::Round(($_.Length/1KB),2)) KB)" }
+              Write-Host "Workspace root now contains:"; Get-ChildItem -Path $PWD -Filter "Ultralight-WebBrowser-*Installer.*" -File | ForEach-Object { Write-Host (' - {0} ({1:N2} KB)' -f $_.FullName, ($_.Length/1KB) ) }
             } else {
               Write-Host "CPack logs did not reveal a package path either. No installer will be uploaded."
             }
