--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -268,16 +268,26 @@ jobs:
             Write-Error "Ultralight Windows SDK not found. Ensure base-sdk branch contains a valid archive or set ULTRALIGHT_SDK_ROOT/ULTRALIGHT_SDK_URL."; exit 1
           }
 
+      - name: "4.5 Install libcurl (vcpkg/choco)"
+        shell: pwsh
+        run: |
+          Write-Host "Attempting to install libcurl for build via vcpkg / chocolatey..."
+          pwsh -File "${{ github.workspace }}\scripts\install_curl.ps1"
+
       - name: "5. Configure CMake"
         if: steps.prep_sdk.outputs.present == 'true'
         run: |
+          # Ensure libcurl is present; if our earlier step installed vcpkg and curl, the toolchain file should be used.
+          Write-Host "(CI) libcurl install attempt finished (if available)."
           cmake --version
           Write-Host "Configuring with ULTRALIGHT_SDK_ROOT=$env:ULTRALIGHT_SDK_ROOT"
           $createInstaller = "$env:CREATE_INSTALLER"
           if ($createInstaller -eq '' -or $null -eq $createInstaller) { $createInstaller = 'false' }
           $installerFlag = if ($createInstaller -match '^(true|1|on)$') { 'ON' } else { 'OFF' }
           Write-Host "CREATE_INSTALLER=$createInstaller -> -DCREATE_INSTALLER=$installerFlag"
-          cmake -S . -B build -DULTRALIGHT_SDK_ROOT="${{ env.ULTRALIGHT_SDK_ROOT }}" -DBUILD_TESTING=ON -DCREATE_INSTALLER=$installerFlag -DWEBBROWSER_VERSION="$env:WEBBROWSER_VERSION"
+          # If vcpkg was installed via install_curl.ps1 in prior step, pass toolchain file
+          $vcpkgToolchain = if ($env:VCPKG_ROOT) { "-DCMAKE_TOOLCHAIN_FILE=$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" } else { "" }
+          cmake -S . -B build -DULTRALIGHT_SDK_ROOT="${{ env.ULTRIGHT_SDK_ROOT }}" -DBUILD_TESTING=ON -DAUTO_INSTALL_CURL=ON -DCREATE_INSTALLER=$installerFlag -DWEBBROWSER_VERSION="$env:WEBBROWSER_VERSION" $vcpkgToolchain
 
       - name: "6. Build Project"
         # We specify the 'Release' config at build time
